--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/4BGRUSH/http-server-demo/issues"
   },
-  "homepage": "https://github.com/4BGRUSH/http-server-demo#readme"
+  "homepage": "https://github.com/4BGRUSH/http-server-demo#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
